Another round of Panama API updates for Java 20
The session now hides its lifecycle from segments.
Back to using the cleaner since the close action is removed (there is a
close action on unsafe segments instead).